# toki-note

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  commands.rs  config.rs  main.rs  storage.rs
src/commands/: events.rs  feeds.rs  import.rs  mod.rs
tests/: events.rs
