[package]
name = "toki-note"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
humantime = "2.1"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono-tz = "0.8"
rss = "2.0"
ics = "0.5"
ical = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
